improved scanning